Bug 458121 - Sometimes plasma crashes in KActivities::Stats::ResultModelPrivate::Cache::replace() after reboot
Summary: Sometimes plasma crashes in KActivities::Stats::ResultModelPrivate::Cache::re...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-activities-stats
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.96.0
Platform: Neon Linux
: VHI crash
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords: drkonqi
: 460919 472104 475035 476113 476948 479104 480598 480690 482535 483461 484128 485255 485300 490357 491718 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-21 01:01 UTC by dvdnet89
Modified: 2024-09-20 00:40 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screenshot (86.83 KB, image/png)
2022-08-21 01:01 UTC, dvdnet89
Details
KDE Debug (13.53 KB, text/vnd.kde.kcrash-report)
2022-08-28 06:16 UTC, dvdnet89
Details
attachment-1793929-0.html (1.01 KB, text/html)
2024-04-10 17:16 UTC, Marty Burgess
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dvdnet89 2022-08-21 01:01:02 UTC
Created attachment 151467 [details]
Screenshot

SUMMARY
***
I started my PC directly and then sometimes the popup appear on my system  


STEPS TO REPRODUCE
1. I started the PC
2. the popup appears


OBSERVED RESULT
The popup is quite distracting

EXPECTED RESULT
The popup should gone

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:  KDE Neon
(available in About System)
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Comment 1 Fushan Wen 2022-08-21 02:57:25 UTC
Do you have accent color from wallpaper enabled?
Comment 2 dvdnet89 2022-08-21 02:59:56 UTC
(In reply to Fushan Wen from comment #1)
> Do you have accent color from wallpaper enabled?

I just change the theme to breeze light and the wallapper settings to slideshow from my local folders
Comment 3 Fushan Wen 2022-08-21 04:41:33 UTC
You need to click the Developer Information and post the back trace 
here, so the crash cause can be found.
Comment 4 dvdnet89 2022-08-28 06:16:00 UTC
Created attachment 151653 [details]
KDE Debug

Sorry for long response. But here is the crash log

Application: Plasma (plasmashell), signal: Segmentation fault

[New LWP 10300]
[New LWP 10316]
[New LWP 10468]
[New LWP 10502]
[New LWP 16497]
[New LWP 16501]
[New LWP 16502]
[New LWP 16504]
[New LWP 16513]
[New LWP 16520]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f29769b199f in __GI___poll (fds=0x7ffe5d211098, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
__preamble__
[Current thread is 1 (Thread 0x7f2972ad09c0 (LWP 10287))]

Thread 11 (Thread 0x7f292a31e700 (LWP 16520)):
#0  0x00007ffe5d3afaed in clock_gettime ()
#1  0x00007f297697c0b5 in __GI___clock_gettime (clock_id=1, tp=0x7f292a31d950) at ../sysdeps/unix/sysv/linux/clock_gettime.c:38
#2  0x00007f2976f81e85 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f2976f8071d in QTimerInfoList::updateCurrentTime() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f2976f80cf9 in QTimerInfoList::timerWait(timespec&) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f2976f82316 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f29752388ef in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f297523929b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f2976f825bb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007f2976d40372 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#14 0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7f292bb22700 (LWP 16513)):
[KCrash Handler]
#4  0x00007f2939075722 in std::thread::_State_impl<std::thread::_Invoker<std::tuple<KActivities::Stats::ResultModelPrivate::Cache::replace(QList<KActivities::Stats::ResultSet::Result> const&, int)::{lambda()#1}> > >::_M_run() () from /lib/x86_64-linux-gnu/libKF5ActivitiesStats.so.1
#5  0x00007f2976b67de4 in ?? () from /lib/x86_64-linux-gnu/libstdc++.so.6
#6  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#7  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7f293b1c9700 (LWP 16504)):
#0  0x00007ffe5d3afaed in clock_gettime ()
#1  0x00007f297697c0b5 in __GI___clock_gettime (clock_id=1, tp=0x7f293b1c8910) at ../sysdeps/unix/sysv/linux/clock_gettime.c:38
#2  0x00007f2976f81e85 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f2976f8071d in QTimerInfoList::updateCurrentTime() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f2976f80cf9 in QTimerInfoList::timerWait(timespec&) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f2976f82316 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f29752388ef in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f297523929b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f2976f825bb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007f2976d40372 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f297891c63a in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#13 0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#15 0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f293be3c700 (LWP 16502)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x560a2c815ce4) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x560a2c815c90, cond=0x560a2c815cb8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x560a2c815cb8, mutex=0x560a2c815c90) at pthread_cond_wait.c:647
#3  0x00007f2976d475fb in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f29789e22f4 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#5  0x00007f29789e2769 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#6  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f295087c700 (LWP 16501)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7f295087bc18, nfds=1, timeout=300000) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f295e984e17 in ?? () from /lib/x86_64-linux-gnu/libnvidia-glcore.so.515.65.01
#2  0x00007f295e98272a in ?? () from /lib/x86_64-linux-gnu/libnvidia-glcore.so.515.65.01
#3  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#4  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f29524e9700 (LWP 16497)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x560a2b4c1134) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x560a2b4c10e0, cond=0x560a2b4c1108) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x560a2b4c1108, mutex=0x560a2b4c10e0) at pthread_cond_wait.c:647
#3  0x00007f2976d475fb in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f29789e22f4 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#5  0x00007f29789e2769 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#6  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f296aab7700 (LWP 10502)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7f2958004e60, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f297523936e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2976f825bb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f2976d40372 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#8  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f29708c5700 (LWP 10468)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7f2960004a60, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f297523936e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2976f825bb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f2976d40372 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f297857e1b9 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f297118a700 (LWP 10316)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7f29640144f0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f297523936e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2976f825a2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f2976d40372 in QThread::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f29778c0f4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f2971e74700 (LWP 10300)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7f2971e73ae8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f2979105c1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f297910790a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f29725863e8 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f2976d41553 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f29766d4609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f29769be133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f2972ad09c0 (LWP 10287)):
#0  0x00007f29769b199f in __GI___poll (fds=0x7ffe5d211098, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f2979105c1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f2979106329 in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f29791065b7 in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#4  0x00007f29791076b5 in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#5  0x00007f2979107735 in xcb_wait_for_reply () from /lib/x86_64-linux-gnu/libxcb.so.1
#6  0x00007f29781e54e3 in ?? () from /lib/x86_64-linux-gnu/libKF5WindowSystem.so.5
#7  0x00007f29781ddcd9 in NETWinInfo::update(QFlags<NET::Property>, QFlags<NET::Property2>) () from /lib/x86_64-linux-gnu/libKF5WindowSystem.so.5
#8  0x00007f29781e0f1a in NETWinInfo::NETWinInfo(xcb_connection_t*, unsigned int, unsigned int, QFlags<NET::Property>, QFlags<NET::Property2>, NET::Role) () from /lib/x86_64-linux-gnu/libKF5WindowSystem.so.5
#9  0x00007f297097f1d7 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/kf5/kwindowsystem/KF5WindowSystemX11Plugin.so
#10 0x0000560a2a1e7d57 in ?? ()
#11 0x0000560a2a1e7e4a in ?? ()
#12 0x00007f297731b04d in QWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#13 0x00007f2978a4d17b in QQuickWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#14 0x00007f2977c5ae83 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007f2977c63c98 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007f2976f27c6a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007f297731acb3 in QWindowPrivate::setVisible(bool) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#18 0x0000560a2a20084d in ?? ()
#19 0x00007f2976f5ed1e in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x0000560a2a21d9a8 in ?? ()
#21 0x00007f2976f5ed1e in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007f2976f638ae in QTimer::timeout(QTimer::QPrivateSignal) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007f2976f55765 in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007f2977c5ae83 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007f2977c63c98 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007f2976f27c6a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#27 0x00007f2976f818f0 in QTimerInfoList::activateTimers() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#28 0x00007f2976f821dc in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#29 0x00007f297523917d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f2975239400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f29752394a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f2976f825a2 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x00007f2976f2676b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#34 0x00007f2976f2e914 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#35 0x0000560a2a1d4577 in ?? ()
#36 0x00007f29768c3083 in __libc_start_main (main=0x560a2a1d36b0, argc=1, argv=0x7ffe5d2128e8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe5d2128d8) at ../csu/libc-start.c:308
#37 0x0000560a2a1d469e in ?? ()
[Inferior 1 (process 10287) detached]
Comment 5 Fushan Wen 2022-08-31 15:55:34 UTC
The debug symbol was missing so the information is less useful, but I notice you are using KDE Neon which may suffer from old X11 version, and the bug may be already fixed in the latest X11.
Comment 6 Nate Graham 2022-10-24 20:33:00 UTC
*** Bug 460919 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2023-09-12 20:53:54 UTC
*** Bug 472104 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2023-10-11 19:26:57 UTC
*** Bug 475035 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2023-10-27 15:44:40 UTC
*** Bug 476113 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2023-11-15 19:10:45 UTC
*** Bug 476948 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2024-02-01 19:10:24 UTC
*** Bug 480690 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2024-02-06 17:29:23 UTC
*** Bug 480835 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2024-02-06 23:20:51 UTC
*** Bug 480598 has been marked as a duplicate of this bug. ***
Comment 14 Bug Janitor Service 2024-02-09 16:10:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-activities-stats/-/merge_requests/58
Comment 15 Harald Sitter 2024-02-12 11:25:17 UTC
Git commit d9d2c8b3c33bfea93080b5104503a4c6333d7558 by Harald Sitter.
Committed on 12/02/2024 at 11:22.
Pushed by sitter into branch 'master'.

resultmodel: guard model in threaded resource cleanup

this previously was subject to a race condition between ResultModel
destruction and the file access finishing. When the file access took
long enough the Model would have been deleted leading to a crash.

Instead weakly point to the model via the QObject such that we can then
check if still exists by the time we want to call into it
Related: bug 466995
Fixes PLASMA-WORKSPACE-YZ

M  +6    -3    src/resultmodel.cpp

https://invent.kde.org/plasma/plasma-activities-stats/-/commit/d9d2c8b3c33bfea93080b5104503a4c6333d7558
Comment 16 Harald Sitter 2024-02-12 11:26:23 UTC
Git commit c5792c06f4060a02561827257f6d1f8005292746 by Harald Sitter.
Committed on 12/02/2024 at 11:25.
Pushed by sitter into branch 'Plasma/6.0'.

resultmodel: guard model in threaded resource cleanup

this previously was subject to a race condition between ResultModel
destruction and the file access finishing. When the file access took
long enough the Model would have been deleted leading to a crash.

Instead weakly point to the model via the QObject such that we can then
check if still exists by the time we want to call into it
Related: bug 466995
Fixes PLASMA-WORKSPACE-YZ


(cherry picked from commit d9d2c8b3c33bfea93080b5104503a4c6333d7558)

M  +6    -3    src/resultmodel.cpp

https://invent.kde.org/plasma/plasma-activities-stats/-/commit/c5792c06f4060a02561827257f6d1f8005292746
Comment 17 Nate Graham 2024-02-16 00:03:06 UTC
*** Bug 479104 has been marked as a duplicate of this bug. ***
Comment 18 Nate Graham 2024-03-08 22:05:38 UTC
*** Bug 482535 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2024-03-13 21:01:49 UTC
*** Bug 483461 has been marked as a duplicate of this bug. ***
Comment 20 Nate Graham 2024-04-09 14:42:45 UTC
*** Bug 485255 has been marked as a duplicate of this bug. ***
Comment 21 Nate Graham 2024-04-10 16:01:27 UTC
*** Bug 485300 has been marked as a duplicate of this bug. ***
Comment 22 Marty Burgess 2024-04-10 17:16:11 UTC
Created attachment 168350 [details]
attachment-1793929-0.html

Hi.


I have decided not use KDE  anymore as I've had trouble installing it of
late. Thank you for your time.

Marty. B.

On Thu, 11 Apr 2024, 02:01 Nate Graham, <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=458121
>
> --- Comment #21 from Nate Graham <nate@kde.org> ---
> *** Bug 485300 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 23 Nate Graham 2024-04-11 19:53:37 UTC
*** Bug 484128 has been marked as a duplicate of this bug. ***
Comment 24 Nate Graham 2024-08-14 21:19:33 UTC
*** Bug 491718 has been marked as a duplicate of this bug. ***
Comment 25 Nate Graham 2024-09-20 00:40:41 UTC
*** Bug 490357 has been marked as a duplicate of this bug. ***