src/resultmodel.cpp
@@ -466,7 +466,8 @@ public:
             // Check whether we got an item representing a non-existent file,
             // if so, schedule its removal from the database
             // we want to do this async so that we don't block
-            std::thread([=, this] {
+            QPointer model{d->q};
+            std::thread([model, newItems] {
                 QList<QString> missingResources;
                 for (const auto &item : newItems) {
                     // QFile.exists() can be incredibly slow (eg. if resource is on remote filesystem)
@@ -479,8 +480,10 @@ public:
                     return;
                 }
 
-                QTimer::singleShot(0, this->d->q, [=, this] {
-                    d->q->forgetResources(missingResources);
+                QTimer::singleShot(0, model, [missingResources, model] {
+                    if (model) {
+                        model->forgetResources(missingResources);
+                    }
                 });
             }).detach();
         }
